# wisco_slap

./: .gitignore  README.md  pyproject.toml
src/csc/: DEFS.yaml  __init__.py  defs.py  utils.py
src/wisco_slap/: __init__.py
src/wisco_slap/core/: SlapData.py  __init__.py
src/wisco_slap/img/: __init__.py  io.py
src/wisco_slap/utils/: __init__.py  gen.py  sync.py
