[project]
name = "wisco-slap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kort Driessene", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "mat73>=0.65",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "tifffile>=2025.8.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
