[project]
name = "wisco-slap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kort Driessen", email = "driessenkort@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "mat73>=0.65",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tifffile>=2025.8.28",
    "xarray>=2025.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Build one wheel that contains both import packages.
[tool.hatch.build.targets.wheel]
packages = [
  "src/wisco_slap",
]

# (Optional but nice for source distributions)
[tool.hatch.build.targets.sdist]
include = [
  "src/wisco_slap/**",
  "README.md",
  "pyproject.toml",
]
